--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <div class="col-md-1 text-center">
             </div>
             <div class="col-md-3 text-center">
-                <h1>Uma história de Shiva</h1>
+                <img src="IMG/1.jpg" alt="" width="200" height="200">
             </div>
             <div class="col-md-7 text-center">
+                <h1>Uma história de Shiva</h1>
                 <p> PorCinmaya Mission Trust
                     “O estudo do Simbolismo Hindu guia a mente em direção a Verdades Eternas, por meio das quais a sabedoria 
                     da Índia vem fluindo por séculos e séculos, através de histórias e fábulas representadas na dança e no
@@ -38,6 +39,7 @@
             <div class="col-md-1 text-center">
             </div>
             <div class="col-md-7 text-center">
+                <h1>História do Yoga</h1>
                 <p> Começamos a publicar em nosso site a história do Yoga escrita pelo mestre Paulo Murilo Rosas, que 
                     trouxe da Índia para o Brasil a técnica do Dakshina Tantra. Dividida em quatro capítulos, a narrativa
                     permitirá um conhecimento sobre as origens desta prática milenar, que tanto tem ajudado as pessoas na
@@ -45,7 +47,7 @@
                 </p>
             </div>
             <div class="col-md-3 text-center">
-                <h1>História do Yoga</h1>
+                <img src="IMG/2.jpg" alt="" width="150" height="150">
             </div>
             <div class="col-md-1 text-center">
             </div>
@@ -55,9 +57,10 @@
             <div class="col-md-1 text-center">
             </div>
             <div class="col-md-3 text-center">
-                <h1>Yoga Pré-Clássico</h1>
+                <img src="IMG/3.jpg" alt="" width="220" height="220">
             </div>
             <div class="col-md-7 text-center">
+                <h1>Yoga Pré-Clássico</h1>
                 <p>Por Paulo Murilo Rosas
                    Vamos iniciar os nossos estudos através de parâmetros ocidentais e, por isso, adotar a nomenclatura corrente,
                    dividindo a exposição em: Yoga Pré-Clássico, Yoga Clássico, Yoga Pós-Clássico e Yoga Contemporâneo.
@@ -77,6 +80,7 @@
             <div class="col-md-1 text-center">
             </div>
             <div class="col-md-7 text-center">
+                <h1>Yoga Clássico</h1>
                 <p>Por Paulo Murilo Rosas
                     Segundo a tradição, o criador do Yoga como filosofia foi Hiranyagarba, muito embora, os pesquisadores não se
                     cansem de afirmar que o Yoga de Patanjali representa um clímax no longo e contínuo desenvolvimento desta filosofia.
@@ -92,7 +96,7 @@
                 </p>
             </div>
             <div class="col-md-3 text-center">
-                <h1>Yoga Clássico</h1>
+                <img src="IMG/4.jpg" alt="" width="250" height="250">
             </div>
             <div class="col-md-1 text-center">
             </div>
@@ -101,9 +105,10 @@
             <div class="col-md-1 text-center">
             </div>
             <div class="col-md-3 text-center">
-                <h1>Yoga Pós-Clássico</h1>
+                <img src="IMG/5.jpg" alt="" width="300" height="300">
             </div>
             <div class="col-md-7 text-center">
+                <h1>Yoga Pós-Clássico</h1>
                 <p> Por Paulo Murilo Rosas
                     A literatura existente, desta fase, é muito rica em conteúdo, temos os Samhitas, os Ágamas e os Nigamas,
                     os Puranas e as Yoga Upanishads, que surgiram entre os séculos VII a XVII d.C.
@@ -131,6 +136,7 @@
                 <div class="col-md-1 text-center">
                 </div>
                 <div class="col-md-7 text-center">
+                    <h1>KAMADEVA O Deus do Amor</h1>
                     <p>Kamadeva – palavra composta Sânscrita que significa desejo, amor (kama) e deus (deva) – é conhecido na Mitologia
                         Hindu como o Deus do Amor.
                         Segundo um hino do Rg Veda, Kama é adorado pelos deuses e é dito que não existe ninguém igual a ele. Segundo 
@@ -143,7 +149,7 @@
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
-                    <h1>KAMADEVA O Deus do Amor</h1>
+                    <img src="IMG/6.jpg" alt="" width="300" height="300">
                 </div>
                 <div class="col-md-1 text-center">
                 </div>
